# Iikoserver-manager

./: .env  config.example.yml  main.py  pyproject.toml
iikoserver/: __init__.py  api_client_manager.py  config_reader.py  exceptions.py  token_manager.py
tests/: __init__.py  conftest.py  test_api_client_manager.py  test_exceptions.py  test_integration.py  test_integration_nomenclature.py  test_integration_nomenclature_read.py  test_integration_reference_data.py  test_token_manager.py
